--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: java
 jdk:
  - oraclejdk8
 
+addons: 
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 deploy:
   provider: heroku
   api_key:
