--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
     sources:
       - google-chrome
     packages:
-      - google-chrome-stable
+      - google-chrome
 deploy:
   provider: heroku
   api_key:
