--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: java
 jdk:
  - oraclejdk8
-
 addons: 
   apt:
     sources:
       - google-chrome
     packages:
-      - google-chrome
+      - libfontconfig1
+      - libstdc++6
+      - lsb-base
+      - google-chrome-stable
 deploy:
   provider: heroku
   api_key:
