--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: java
 jdk:
  - oraclejdk8
-before_install
- - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
- - sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
- - sudo apt-get update
- - sudo apt-get install google-chrome-stable                        
+before_install:
+  - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+  - sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+  - sudo apt-get update
+  - sudo apt-get install google-chrome-stable                        
 deploy:
   provider: heroku
   api_key:
