--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: java
 jdk:
  - oraclejdk8
+sudo: required
+dist: trusty
 before_install:
-  - wget http://chromedriver.storage.googleapis.com/2.10/chromedriver_linux64.zip
-  - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/java*
-  - export CHROME_BIN=chromium-browser
+ - sudo apt-get update
+ - sudo apt-get install chromium-chromedriver
+before_script:
+  - "export PATH=$PATH:/usr/lib/chromium-browser/"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - sleep 3                 
+- sleep 3 # give xvfb some time to start              
 deploy:
   provider: heroku
   api_key:
