--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk:
  - oraclejdk8
-before_script: chmod +x target/*.jar || java -jar /target/*.jar
+before_script: chmod +x target/*.jar && java -jar target/*.jar
 deploy:
   provider: heroku
   api_key:
