--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: java
 jdk:
  - oraclejdk8
-before_script: chmod +x "~/travis/.m2/repository/bibfrog/bibfrog/1.0-SNAPSHOT/bibfrog-1.0-SNAPSHOT.jar" && java -jar "~/travis/.m2/repository/bibfrog/bibfrog/1.0-SNAPSHOT/bibfrog-1.0-SNAPSHOT.jar" & && sleep 10s
+before_script:
+ - chmod +x "~/travis/.m2/repository/bibfrog/bibfrog/1.0-SNAPSHOT/bibfrog-1.0-SNAPSHOT.jar"
+ - java -jar "~/travis/.m2/repository/bibfrog/bibfrog/1.0-SNAPSHOT/bibfrog-1.0-SNAPSHOT.jar" &
+ - sleep 10s
 deploy:
   provider: heroku
   api_key:
