--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: java
 jdk:
  - oraclejdk8
 before_script:
- - sudo chmod +x "~/.m2/repository/bibfrog/bibfrog/1.0-SNAPSHOT/bibfrog-1.0-SNAPSHOT.jar"
- - java -jar "~/.m2/repository/bibfrog/bibfrog/1.0-SNAPSHOT/bibfrog-1.0-SNAPSHOT.jar" &
+ - sudo chmod +x "*.jar"
+ - java -jar "*.jar" &
  - sleep 10s
 deploy:
   provider: heroku
